// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`從 JSON Schema 提取默認值 應該與 DEFAULT_CONFIG 等價 1`] = `
{
  "background": {
    "auto_resume": {
      "backoff_max_delay": 300000,
      "backoff_multiplier": 2,
      "backoff_strategy": "fixed",
      "enabled": false,
      "max_retries": 3,
      "on_error": "ignore",
      "retry_delay": 5000,
      "safety_prompt": 
"This is an automatic retry. Follow these steps:

1. If the next step is clear and actionable, proceed.
2. If potential risks exist (e.g., destructive changes, data loss, security concerns, or modifying files outside the project), stop, explain the risks, and request confirmation.
3. If requirements are ambiguous or information is insufficient, stop, state the uncertainty, and request clarification.
4. Unless the user explicitly requests to revert changes or delete files, always ask for permission first and only proceed after obtaining user consent.

**If the task is complete, review and summarize the results, then end.**"
,
      "target": "background",
    },
    "poll_interval": 2000,
    "retry_delay_increment": 5000,
    "retry_delay_max": 60000,
  },
  "banner_every_session": false,
  "compaction": {
    "preserve_todos": true,
    "threshold_percent": 80,
  },
  "debug": {
    "enabled": false,
    "level": "warn",
  },
  "output_shaping": {
    "max_chars": 12000,
    "preserve_errors": true,
  },
  "show_banner": true,
}
`;

exports[`從 Zod Schema 直接提取默認值 應該與 DEFAULT_CONFIG 等價 1`] = `
{
  "background": {
    "auto_resume": {
      "backoff_max_delay": 300000,
      "backoff_multiplier": 2,
      "backoff_strategy": "fixed",
      "enabled": false,
      "max_retries": 3,
      "on_error": "ignore",
      "prompts": {},
      "retry_delay": 5000,
      "safety_prompt": 
"This is an automatic retry. Follow these steps:

1. If the next step is clear and actionable, proceed.
2. If potential risks exist (e.g., destructive changes, data loss, security concerns, or modifying files outside the project), stop, explain the risks, and request confirmation.
3. If requirements are ambiguous or information is insufficient, stop, state the uncertainty, and request clarification.
4. Unless the user explicitly requests to revert changes or delete files, always ask for permission first and only proceed after obtaining user consent.

**If the task is complete, review and summarize the results, then end.**"
,
      "target": "background",
    },
    "poll_interval": 2000,
    "retry_delay_increment": 5000,
    "retry_delay_max": 60000,
  },
  "banner_every_session": false,
  "collaborate": {},
  "compaction": {
    "preserve_todos": true,
    "threshold_percent": 80,
  },
  "debug": {
    "enabled": false,
    "level": "warn",
  },
  "output_shaping": {
    "max_chars": 12000,
    "preserve_errors": true,
  },
  "show_banner": true,
}
`;
